update get last song normalize search text

--- a/hola.ipynb
+++ b/hola.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -52,83 +53,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10000</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>https://www.last.fm/music/animal%2bcollective/...</td>\n",
-       "      <td>The Living Toys</td>\n",
-       "      <td>Animal Collective</td>\n",
-       "      <td>['eerie']</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.last.fm/music/eminem/_/%2527till%2...</td>\n",
+       "      <td>'Till I Collapse</td>\n",
+       "      <td>Eminem</td>\n",
+       "      <td>['aggressive']</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.550000</td>\n",
+       "      <td>5.273125</td>\n",
+       "      <td>5.690625</td>\n",
+       "      <td>cab93def-26c5-4fb0-bedd-26ec4c1619e1</td>\n",
+       "      <td>4xkOaSrkexMciUUogZKVTS</td>\n",
+       "      <td>rap</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>3.400000</td>\n",
-       "      <td>5.5700</td>\n",
-       "      <td>3.910000</td>\n",
-       "      <td>06454bca-525b-420b-b25c-033340d7ac8b</td>\n",
-       "      <td>04lmLCJ2HcY1sWKvr2aPWV</td>\n",
-       "      <td>experimental</td>\n",
+       "      <td>https://www.last.fm/music/metallica/_/st.%2banger</td>\n",
+       "      <td>St. Anger</td>\n",
+       "      <td>Metallica</td>\n",
+       "      <td>['aggressive']</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.710000</td>\n",
+       "      <td>5.833000</td>\n",
+       "      <td>5.427250</td>\n",
+       "      <td>727a2529-7ee8-4860-aef6-7959884895cb</td>\n",
+       "      <td>3fOc9x06lKJBhz435mInlH</td>\n",
+       "      <td>metal</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10001</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>https://www.last.fm/music/jonny%2bgreenwood/_/...</td>\n",
-       "      <td>Stranded The Line</td>\n",
-       "      <td>Jonny Greenwood</td>\n",
-       "      <td>['eerie']</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://www.last.fm/music/rick%2bross/_/speedi...</td>\n",
+       "      <td>Speedin'</td>\n",
+       "      <td>Rick Ross</td>\n",
+       "      <td>['aggressive']</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.080000</td>\n",
+       "      <td>5.870000</td>\n",
+       "      <td>5.490000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3Y96xd4Ce0J47dcalLrEC8</td>\n",
+       "      <td>rap</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>5.046667</td>\n",
-       "      <td>5.0200</td>\n",
-       "      <td>4.596667</td>\n",
-       "      <td>ba8982d2-4e73-4697-857c-3fbd62fd245f</td>\n",
-       "      <td>20wqsJKQrhWlKDOzawaLS0</td>\n",
-       "      <td>soundtrack</td>\n",
+       "      <td>https://www.last.fm/music/m.i.a./_/bamboo%2bbanga</td>\n",
+       "      <td>Bamboo Banga</td>\n",
+       "      <td>M.I.A.</td>\n",
+       "      <td>['aggressive', 'fun', 'sexy', 'energetic']</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6.555071</td>\n",
+       "      <td>5.537214</td>\n",
+       "      <td>5.691357</td>\n",
+       "      <td>99dd2c8c-e7c1-413e-8ea4-4497a00ffa18</td>\n",
+       "      <td>6tqFC1DIOphJkCwrjVzPmg</td>\n",
+       "      <td>hip-hop</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10002</th>\n",
-       "      <td>10002</td>\n",
-       "      <td>https://www.last.fm/music/queens%2bof%2bthe%2b...</td>\n",
-       "      <td>The Fun Machine Took A Shit And Died</td>\n",
-       "      <td>Queens of the Stone Age</td>\n",
-       "      <td>['eerie']</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5.897955</td>\n",
-       "      <td>5.0625</td>\n",
-       "      <td>4.839318</td>\n",
-       "      <td>4b26f431-6ff1-4acb-8258-be6a217a589e</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>hard rock</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10003</th>\n",
-       "      <td>10003</td>\n",
-       "      <td>https://www.last.fm/music/bauhaus/_/ear%2bwax</td>\n",
-       "      <td>Ear Wax</td>\n",
-       "      <td>Bauhaus</td>\n",
-       "      <td>['eerie']</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.240000</td>\n",
-       "      <td>4.8300</td>\n",
-       "      <td>4.260000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5eFzyX22yduMluURImM4EV</td>\n",
-       "      <td>post-punk</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10004</th>\n",
-       "      <td>10004</td>\n",
-       "      <td>https://www.last.fm/music/midtown/_/god%2bis%2...</td>\n",
-       "      <td>God Is Dead</td>\n",
-       "      <td>Midtown</td>\n",
-       "      <td>['eerie', 'lonely']</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.913333</td>\n",
-       "      <td>4.7700</td>\n",
-       "      <td>3.523333</td>\n",
-       "      <td>ca5192a0-9ab6-45d7-a8fb-a4aa3092f174</td>\n",
-       "      <td>5OEL8AEhtH9V2ccTXWEhTw</td>\n",
-       "      <td>alternative rock</td>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>https://www.last.fm/music/dope/_/die%2bmf%2bdie</td>\n",
+       "      <td>Die MF Die</td>\n",
+       "      <td>Dope</td>\n",
+       "      <td>['aggressive']</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3.771176</td>\n",
+       "      <td>5.348235</td>\n",
+       "      <td>5.441765</td>\n",
+       "      <td>b9eb3484-5e0e-4690-ab5a-ca91937032a5</td>\n",
+       "      <td>5bU4KX47KqtDKKaLM4QCzh</td>\n",
+       "      <td>metal</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -136,43 +137,43 @@
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0                                         lastfm_url  \\\n",
-       "10000       10000  https://www.last.fm/music/animal%2bcollective/...   \n",
-       "10001       10001  https://www.last.fm/music/jonny%2bgreenwood/_/...   \n",
-       "10002       10002  https://www.last.fm/music/queens%2bof%2bthe%2b...   \n",
-       "10003       10003      https://www.last.fm/music/bauhaus/_/ear%2bwax   \n",
-       "10004       10004  https://www.last.fm/music/midtown/_/god%2bis%2...   \n",
+       "   Unnamed: 0                                         lastfm_url  \\\n",
+       "0           0  https://www.last.fm/music/eminem/_/%2527till%2...   \n",
+       "1           1  https://www.last.fm/music/metallica/_/st.%2banger   \n",
+       "2           2  https://www.last.fm/music/rick%2bross/_/speedi...   \n",
+       "3           3  https://www.last.fm/music/m.i.a./_/bamboo%2bbanga   \n",
+       "4           4    https://www.last.fm/music/dope/_/die%2bmf%2bdie   \n",
        "\n",
-       "                                      track                   artist  \\\n",
-       "10000                       The Living Toys        Animal Collective   \n",
-       "10001                     Stranded The Line          Jonny Greenwood   \n",
-       "10002  The Fun Machine Took A Shit And Died  Queens of the Stone Age   \n",
-       "10003                               Ear Wax                  Bauhaus   \n",
-       "10004                           God Is Dead                  Midtown   \n",
+       "              track     artist                                       seeds  \\\n",
+       "0  'Till I Collapse     Eminem                              ['aggressive']   \n",
+       "1         St. Anger  Metallica                              ['aggressive']   \n",
+       "2          Speedin'  Rick Ross                              ['aggressive']   \n",
+       "3      Bamboo Banga     M.I.A.  ['aggressive', 'fun', 'sexy', 'energetic']   \n",
+       "4        Die MF Die       Dope                              ['aggressive']   \n",
        "\n",
-       "                     seeds  number_of_emotion_tags  valence_tags  \\\n",
-       "10000            ['eerie']                       1      3.400000   \n",
-       "10001            ['eerie']                       3      5.046667   \n",
-       "10002            ['eerie']                       2      5.897955   \n",
-       "10003            ['eerie']                       2      4.240000   \n",
-       "10004  ['eerie', 'lonely']                       2      2.913333   \n",
+       "   number_of_emotion_tags  valence_tags  arousal_tags  dominance_tags  \\\n",
+       "0                       6      4.550000      5.273125        5.690625   \n",
+       "1                       8      3.710000      5.833000        5.427250   \n",
+       "2                       1      3.080000      5.870000        5.490000   \n",
+       "3                      13      6.555071      5.537214        5.691357   \n",
+       "4                       7      3.771176      5.348235        5.441765   \n",
        "\n",
-       "       arousal_tags  dominance_tags                                  mbid  \\\n",
-       "10000        5.5700        3.910000  06454bca-525b-420b-b25c-033340d7ac8b   \n",
-       "10001        5.0200        4.596667  ba8982d2-4e73-4697-857c-3fbd62fd245f   \n",
-       "10002        5.0625        4.839318  4b26f431-6ff1-4acb-8258-be6a217a589e   \n",
-       "10003        4.8300        4.260000                                   NaN   \n",
-       "10004        4.7700        3.523333  ca5192a0-9ab6-45d7-a8fb-a4aa3092f174   \n",
+       "                                   mbid              spotify_id    genre  \\\n",
+       "0  cab93def-26c5-4fb0-bedd-26ec4c1619e1  4xkOaSrkexMciUUogZKVTS      rap   \n",
+       "1  727a2529-7ee8-4860-aef6-7959884895cb  3fOc9x06lKJBhz435mInlH    metal   \n",
+       "2                                   NaN  3Y96xd4Ce0J47dcalLrEC8      rap   \n",
+       "3  99dd2c8c-e7c1-413e-8ea4-4497a00ffa18  6tqFC1DIOphJkCwrjVzPmg  hip-hop   \n",
+       "4  b9eb3484-5e0e-4690-ab5a-ca91937032a5  5bU4KX47KqtDKKaLM4QCzh    metal   \n",
        "\n",
-       "                   spotify_id             genre  uploaded  \n",
-       "10000  04lmLCJ2HcY1sWKvr2aPWV      experimental     False  \n",
-       "10001  20wqsJKQrhWlKDOzawaLS0        soundtrack     False  \n",
-       "10002                     NaN         hard rock     False  \n",
-       "10003  5eFzyX22yduMluURImM4EV         post-punk     False  \n",
-       "10004  5OEL8AEhtH9V2ccTXWEhTw  alternative rock     False  "
+       "   uploaded  \n",
+       "0     False  \n",
+       "1     False  \n",
+       "2     False  \n",
+       "3     False  \n",
+       "4     False  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +182,13 @@
     "\n",
     "data = pd.read_csv(\"data.csv\")\n",
     "\n",
-    "data = data.loc[10000:20000]\n",
     "\n",
     "data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -229,83 +229,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19996</th>\n",
-       "      <td>19996</td>\n",
-       "      <td>https://www.last.fm/music/grimes/_/sagrad%2b%2...</td>\n",
-       "      <td>Sagrad прекрасный</td>\n",
-       "      <td>Grimes</td>\n",
-       "      <td>['dreamy', 'ethereal']</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.559294</td>\n",
-       "      <td>3.183529</td>\n",
-       "      <td>3.825412</td>\n",
-       "      <td>54409b5c-ddfc-40b5-8a62-0b1606122585</td>\n",
-       "      <td>2DMDhTPBW7V1ROVlIPRbNT</td>\n",
-       "      <td>experimental</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19997</th>\n",
-       "      <td>19997</td>\n",
-       "      <td>https://www.last.fm/music/cocteau%2btwins/_/do...</td>\n",
-       "      <td>Donimo</td>\n",
-       "      <td>Cocteau Twins</td>\n",
-       "      <td>['dreamy', 'ethereal']</td>\n",
-       "      <td>17</td>\n",
-       "      <td>6.564091</td>\n",
-       "      <td>4.247273</td>\n",
-       "      <td>6.002727</td>\n",
-       "      <td>d8d2e64a-0b8f-43df-a906-13e5745cc0bc</td>\n",
-       "      <td>5JeK01OZLYXm4KntPXYOmx</td>\n",
-       "      <td>dream pop</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19998</th>\n",
-       "      <td>19998</td>\n",
-       "      <td>https://www.last.fm/music/burial/_/come%2bdown...</td>\n",
-       "      <td>Come Down to Us</td>\n",
-       "      <td>Burial</td>\n",
-       "      <td>['dreamy']</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.520000</td>\n",
-       "      <td>4.900000</td>\n",
-       "      <td>6.280000</td>\n",
-       "      <td>ea9fe431-2d2b-4150-a9f5-5120d2dbaa04</td>\n",
-       "      <td>22vmdMMFCgyJr9Ette0ZNq</td>\n",
-       "      <td>electronic</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19999</th>\n",
-       "      <td>19999</td>\n",
-       "      <td>https://www.last.fm/music/the%2bbreeders/_/off...</td>\n",
-       "      <td>Off You</td>\n",
-       "      <td>The Breeders</td>\n",
-       "      <td>['dreamy', 'gentle', 'quirky']</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4.923333</td>\n",
-       "      <td>3.310000</td>\n",
-       "      <td>4.978889</td>\n",
-       "      <td>54e6e723-55f8-4f6c-8832-c7da5a81a537</td>\n",
-       "      <td>1W0IWU1XpPhNZ3hdxXK4IZ</td>\n",
-       "      <td>indie</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20000</th>\n",
-       "      <td>20000</td>\n",
-       "      <td>https://www.last.fm/music/brazilian%2bgirls/_/...</td>\n",
-       "      <td>Lazy Lover</td>\n",
-       "      <td>Brazilian Girls</td>\n",
-       "      <td>['dreamy']</td>\n",
-       "      <td>12</td>\n",
-       "      <td>7.115200</td>\n",
-       "      <td>5.531760</td>\n",
-       "      <td>6.147760</td>\n",
-       "      <td>3aac3d0e-9f50-4b1d-96aa-c961142e0031</td>\n",
-       "      <td>2Rkl87U5VU2LNTT9gAbA2Z</td>\n",
-       "      <td>downtempo</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.last.fm/music/eminem/_/%2527till%2...</td>\n",
+       "      <td>'Till I Collapse</td>\n",
+       "      <td>Eminem</td>\n",
+       "      <td>['aggressive']</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>5.273125</td>\n",
+       "      <td>5.690625</td>\n",
+       "      <td>cab93def-26c5-4fb0-bedd-26ec4c1619e1</td>\n",
+       "      <td>4xkOaSrkexMciUUogZKVTS</td>\n",
+       "      <td>rap</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,50 +249,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0                                         lastfm_url  \\\n",
-       "19996       19996  https://www.last.fm/music/grimes/_/sagrad%2b%2...   \n",
-       "19997       19997  https://www.last.fm/music/cocteau%2btwins/_/do...   \n",
-       "19998       19998  https://www.last.fm/music/burial/_/come%2bdown...   \n",
-       "19999       19999  https://www.last.fm/music/the%2bbreeders/_/off...   \n",
-       "20000       20000  https://www.last.fm/music/brazilian%2bgirls/_/...   \n",
+       "   Unnamed: 0                                         lastfm_url  \\\n",
+       "0           0  https://www.last.fm/music/eminem/_/%2527till%2...   \n",
        "\n",
-       "                   track           artist                           seeds  \\\n",
-       "19996  Sagrad прекрасный           Grimes          ['dreamy', 'ethereal']   \n",
-       "19997             Donimo    Cocteau Twins          ['dreamy', 'ethereal']   \n",
-       "19998    Come Down to Us           Burial                      ['dreamy']   \n",
-       "19999            Off You     The Breeders  ['dreamy', 'gentle', 'quirky']   \n",
-       "20000         Lazy Lover  Brazilian Girls                      ['dreamy']   \n",
+       "              track  artist           seeds  number_of_emotion_tags  \\\n",
+       "0  'Till I Collapse  Eminem  ['aggressive']                       6   \n",
        "\n",
-       "       number_of_emotion_tags  valence_tags  arousal_tags  dominance_tags  \\\n",
-       "19996                       4      4.559294      3.183529        3.825412   \n",
-       "19997                      17      6.564091      4.247273        6.002727   \n",
-       "19998                       1      7.520000      4.900000        6.280000   \n",
-       "19999                       7      4.923333      3.310000        4.978889   \n",
-       "20000                      12      7.115200      5.531760        6.147760   \n",
+       "   valence_tags  arousal_tags  dominance_tags  \\\n",
+       "0          4.55      5.273125        5.690625   \n",
        "\n",
-       "                                       mbid              spotify_id  \\\n",
-       "19996  54409b5c-ddfc-40b5-8a62-0b1606122585  2DMDhTPBW7V1ROVlIPRbNT   \n",
-       "19997  d8d2e64a-0b8f-43df-a906-13e5745cc0bc  5JeK01OZLYXm4KntPXYOmx   \n",
-       "19998  ea9fe431-2d2b-4150-a9f5-5120d2dbaa04  22vmdMMFCgyJr9Ette0ZNq   \n",
-       "19999  54e6e723-55f8-4f6c-8832-c7da5a81a537  1W0IWU1XpPhNZ3hdxXK4IZ   \n",
-       "20000  3aac3d0e-9f50-4b1d-96aa-c961142e0031  2Rkl87U5VU2LNTT9gAbA2Z   \n",
+       "                                   mbid              spotify_id genre  \\\n",
+       "0  cab93def-26c5-4fb0-bedd-26ec4c1619e1  4xkOaSrkexMciUUogZKVTS   rap   \n",
        "\n",
-       "              genre  uploaded  \n",
-       "19996  experimental     False  \n",
-       "19997     dream pop     False  \n",
-       "19998    electronic     False  \n",
-       "19999         indie     False  \n",
-       "20000     downtempo     False  "
+       "   uploaded  \n",
+       "0     False  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = data.loc[10000:40000]\n",
-    "data.tail()"
+    "\n",
+    "def normalize_text(text):\n",
+    "    # Convertir a minúsculas\n",
+    "    text = text.lower()\n",
+    "    # Eliminar caracteres no alfabéticos (mantener espacios)\n",
+    "    text = re.sub(r'[^a-z0-9\\s]', '', text)\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "data[data['track'].apply(lambda x: normalize_text(x)).str.contains(normalize_text(\"Till I Collapse\"))]"
    ]
   }
  ],
